--- a/templates/experiments/experiment_form.html
+++ b/templates/experiments/experiment_form.html
@@ -17,7 +17,7 @@
         <div class="row">
     <div class="col-md-offset-2 col-md-8 col-sm-12">
   <div class="box box-solid">
-    <form method="post">
+    <form action="" method="post">
       <div class="box-body">
         {% csrf_token %}
         {{ form|as_bootstrap }}
