--- a/templates/profiles/profile_form.html
+++ b/templates/profiles/profile_form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <div class="col-lg-6">
-    <form method="post" class="form-horizontal"> {% csrf_token %}
+    <form action="" method="post" class="form-horizontal"> {% csrf_token %}
       {{ form|as_bootstrap }}
       <button type="submit" class="btn btn-info btn-sm">{% trans 'Invite'|upper %}</button>
     </form>
