--- a/templates/search/search_list.html
+++ b/templates/search/search_list.html
@@ -7,7 +7,7 @@
   <div class="col-xs-12">
     <div class="box box-solid">
       <div class="box-body">
-        <form method="get">
+        <form action="" method="get">
           <div class="input-group">
             {{ form|as_bootstrap }}
             <ul class="nav nav-pills nav-justified" id="search-component"></ul>
