--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -377,6 +377,7 @@
         </div>
     </div>
   </div>
+  {% include 'filemanager/angular/modal_summernote.html' %}
   {% include 'filemanager/angular/modal.html' %}
 </div>
 
