--- a/templates/filemanager/angular/base.html
+++ b/templates/filemanager/angular/base.html
@@ -2,7 +2,9 @@
 {% load i18n %}
 
 {% block extra_script %}
-
+<script>
+   window.lab_name = '{{ lab.name }}';
+</script>
 {% endblock %}
 {% block page_header %}{% endblock %}
 
