--- a/templates/filemanager/angular/modal_scripts.html
+++ b/templates/filemanager/angular/modal_scripts.html
@@ -28,6 +28,7 @@
           choose: true,
           remove: false
         })
+//          TODO:  tplPath: 'src/templates'
       });
     }]);
   </script>
