--- a/static/src/templates/navbar.html
+++ b/static/src/templates/navbar.html
@@ -12,10 +12,10 @@
     <div id="navbar" class="navbar-collapse collapse">
       <div class="navbar-form navbar-right">
         <input type="text" class="form-control input-sm hide" placeholder="{{'search' | translate}}..." ng-model="$parent.query">
-        <button class="btn btn-default btn-sm" data-toggle="modal" data-target="#newfolder" ng-click="touch()">
+        <button class="btn btn-default btn-sm" data-toggle="modal" ng-show="config.allowedActions.download" data-target="#newfolder" ng-click="touch()">
             <i class="glyphicon glyphicon-plus"></i> {{"create_folder" | translate}}
         </button>
-        <button class="btn btn-default btn-sm" data-toggle="modal" data-target="#uploadfile" ng-click="touch()">
+        <button class="btn btn-default btn-sm" data-toggle="modal" ng-show="config.allowedActions.download" data-target="#uploadfile" ng-click="touch()">
             <i class="glyphicon glyphicon-upload"></i> {{"upload_file" | translate}}
         </button>
 
