--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -30,7 +30,7 @@
                   Where are new messages
                 </div>
               {% endif %}
-              {% include 'comments/comment_form_block.html' with not_collapse="1" %}
+              {% include 'comments/comment_form_ang.html' with not_collapse="1" %}
             </div>
           </div>
         </div>
@@ -38,9 +38,9 @@
           <div class="row">
             <div class="col-lg-12">
               <div style="overflow:hidden">
-                <iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="100%">
-                  Ваш браузер не поддерживает плавающие фреймы!
-                </iframe>
+                <!--<iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="100%">-->
+                  <!--Ваш браузер не поддерживает плавающие фреймы!-->
+                <!--</iframe>-->
               </div>
             </div>
           </div>
