--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -38,9 +38,9 @@
           <div class="row">
             <div class="col-lg-12">
               <div style="overflow:hidden">
-                <!--<iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="100%">-->
-                  <!--Ваш браузер не поддерживает плавающие фреймы!-->
-                <!--</iframe>-->
+                <iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="100%">
+                  Ваш браузер не поддерживает плавающие фреймы!
+                </iframe>
               </div>
             </div>
           </div>
