--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -70,6 +70,11 @@
           <i class="fa fa-tags"></i> <span>{% trans 'Tags' %}</span>
         </a>
       </li>
+      <li class="{% if active_tab == 'storages' %}active{% endif %}">
+        <a href="{% url 'storages:index' lab_pk=lab.pk %}">
+          <i class="fa fa-upload"></i> <span>{% trans 'Storages' %}</span>
+        </a>
+      </li>
       <!--<li class="treeview{% if active_tab in 'tags,measurement types,collections' %} active{% endif %}">-->
         <!--<a href="">-->
           <!--<i class="fa fa-folder{% if active_tab in 'tags,measurement types,collections' %}-open{% endif %}-o"></i>-->
