--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -307,19 +307,21 @@
                     <!--<a style="display:none" class="btn btn-primary edit-unit">Edit</a>-->
                   </div>
 
-                  <div class="tab-pane"  id="unit-measurements">
+                  <div class="tab-pane"  ng-controller="MeasurementCtrl" id="unit-measurements">
                     <div class="btn-group">
-                      <button style="display:none" id="save" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Save' %}</button>
+                      <button style="display:none" ng-click="saveTable()" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Save' %}</button>
                     </div>
                     <div class="btn-group">
-                      <button  style="display:none" class="addcolumn btn bg-olive"><i class="fa fa-plus"></i> {% trans 'Add Column' %}</button>
+                      <button  style="display:none" ng-click="addColumn()" class="btn bg-olive"><i class="fa fa-plus"></i> {% trans 'Add Column' %}</button>
                     </div>
                     <div class="btn-group">
                       <button  style="display:none" class="show-plot btn bg-olive"><i class="fa fa-area-chart"></i> {% trans 'Create plot' %}</button>
                     </div>
                     <div class="btn-group pull-right">
                       <button style="display:none" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">History <span class="caret"></span></button>
-                      <ul class="dropdown-menu scrollable-menu revision-list" role="menu"></ul>
+                      <ul class="dropdown-menu scrollable-menu" role="menu">
+                         <li ng-repeat="revision in measurement.revisions"><a href="#" ng-click="revertRevision(revision.url)" ng-bind="revision.timestamp"></a></li>
+                      </ul>
                     </div>
                     <div class="plot-area">
                       <div class="voffset1">
@@ -352,13 +354,7 @@
                     </div>
                     <div class="top voffset2">
                       <div class="wrap-handsontable">
-                        <div id="dataTableEditable" data-content='[[&quot;&quot;, &quot;&quot;], [&quot;&quot;, &quot;&quot;]]'
-                             data-title='[[&quot;&quot;, &quot;&quot;], [&quot;&quot;, &quot;&quot;]]'
-                             data-column='[[&quot;&quot;, &quot;&quot;], [&quot;&quot;, &quot;&quot;]]'
-                             data-url=''
-                             data-remove-url=''>
-
-                         </div>
+                         <div id="dataTableEditable"></div>
                       </div>
                     </div>
                   </div>
