--- a/templates/search/search_list.html
+++ b/templates/search/search_list.html
@@ -9,7 +9,7 @@
       <div class="box-body">
         <form action="" method="get">
           <div class="input-group">
-            {{ form|as_bootstrap }}
+           {{ form.q }}
             <!--<ul class="nav nav-pills nav-justified" id="search-component"></ul>-->
             <span class="input-group-btn top-vertical-align">
                 <button type="submit" name="search" title="Search" id="search-btn" class="btn btn-flat btn-info">
