Add hansontable table scrolls. Fix filename length in uploader.

--- a/static_dist/css/styles.css
+++ b/static_dist/css/styles.css
@@ -399,3 +399,9 @@ text.id {
 .error-page>.error-content {
     padding-top: 20px;
 }
+
+@media (max-width: 1400px) {
+    .files .name {
+        width: 90px;
+        word-wrap: break-word;
+    }}
