Remove files from 'static folder'. Fix images folders. Rename 'static_dict' to 'static_src'

--- a/templates/comments/comment_block.html
+++ b/templates/comments/comment_block.html
@@ -14,7 +14,7 @@
   {% if comment.init_user.avatar %}
     <img class="img-circle img-sm" src="{{ comment.init_user.avatar_thumbnail.url }}" alt="user image">
   {% else %}
-    <img class="img-circle img-sm" src="{% static 'img/gravatar.png' %}" alt="user image">
+    <img class="img-circle img-sm" src="{% static 'images/gravatar.png' %}" alt="user image">
   {% endif %}
   <div class="comment-text">
     <span class="username">
