--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -6,7 +6,7 @@
         {% if user.avatar %}
           <img src="{{ user.avatar_thumbnail.url }}" class="img-circle" alt="User Image">
         {% else %}
-          <img src="{% static 'img/ava_placeholder.png' %}" class="img-circle" alt="User Image">
+          <img src="{% static 'images/ava_placeholder.png' %}" class="img-circle" alt="User Image">
         {% endif %}
       </div>
       <div class="pull-left info">
