Rewrite unit comments  with angular

--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -370,6 +370,7 @@
                   </div>
 
                   <div class="tab-pane" id="unit-comments">
+                    {% include 'comments/comment_form_ang_unit.html' with not_sockets="1" not_collapse="1" modal_id="unit-comments-modal" delete_modal_id="unit-comments-delete" %}
                   </div>
                 </div>
               </div>
